// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChatMessage /> renders correctly message 1`] = `
<div
  className="ChatMessage-messageWrapper-63 ChatMessage-messageWrapperFromMe-64"
>
  <div
    className="MuiAvatar-root-71 MuiAvatar-colorDefault-72"
    style={
      Object {
        "backgroundColor": "#8bc34a",
      }
    }
  >
    T
  </div>
  <div
    className="MuiPaper-root-74 MuiPaper-elevation2-78 MuiPaper-rounded-75 ChatMessage-message-65 ChatMessage-messageFromMe-66"
  >
    <span
      className="MuiTypography-root-101 MuiTypography-caption-111"
      style={
        Object {
          "color": "#8bc34a",
        }
      }
    >
      test
    </span>
    <pre
      className="MuiTypography-root-101 MuiTypography-body1-110 ChatMessage-content-69"
    >
      test message
    </pre>
    <span
      className="MuiTypography-root-101 MuiTypography-caption-111 ChatMessage-time-70"
    >
      15:00
    </span>
  </div>
</div>
`;

exports[`<ChatMessage /> renders message from other users 1`] = `
<div
  className="ChatMessage-messageWrapper-63"
>
  <div
    className="MuiAvatar-root-71 MuiAvatar-colorDefault-72"
    style={
      Object {
        "backgroundColor": "#ffc107",
      }
    }
  >
    S
  </div>
  <div
    className="MuiPaper-root-74 MuiPaper-elevation2-78 MuiPaper-rounded-75 ChatMessage-message-65"
  >
    <span
      className="MuiTypography-root-101 MuiTypography-caption-111"
      style={
        Object {
          "color": "#ffc107",
        }
      }
    >
      someone
    </span>
    <pre
      className="MuiTypography-root-101 MuiTypography-body1-110 ChatMessage-content-69"
    >
      test message
    </pre>
    <span
      className="MuiTypography-root-101 MuiTypography-caption-111 ChatMessage-time-70"
    >
      15:00
    </span>
  </div>
</div>
`;

exports[`<ChatMessage /> renders name in status message correctly 1`] = `
<div
  className="ChatMessage-messageWrapper-63"
>
  <div
    className="ChatMessage-statusMessage-67"
  >
    <span
      className="MuiTypography-root-101 MuiTypography-caption-111 ChatMessage-statusMessageUser-68"
      style={
        Object {
          "color": "#ffc107",
        }
      }
    >
      Name Surname
    </span>
    test message
    <span
      className="MuiTypography-root-101 MuiTypography-caption-111"
    >
      2 days ago
    </span>
  </div>
</div>
`;

exports[`<ChatMessage /> renders name of other users correctly 1`] = `
<div
  className="ChatMessage-messageWrapper-63"
>
  <div
    className="MuiAvatar-root-71 MuiAvatar-colorDefault-72"
    style={
      Object {
        "backgroundColor": "#ffc107",
      }
    }
  >
    NS
  </div>
  <div
    className="MuiPaper-root-74 MuiPaper-elevation2-78 MuiPaper-rounded-75 ChatMessage-message-65"
  >
    <span
      className="MuiTypography-root-101 MuiTypography-caption-111"
      style={
        Object {
          "color": "#ffc107",
        }
      }
    >
      Name Surname
    </span>
    <pre
      className="MuiTypography-root-101 MuiTypography-body1-110 ChatMessage-content-69"
    >
      test message
    </pre>
    <span
      className="MuiTypography-root-101 MuiTypography-caption-111 ChatMessage-time-70"
    >
      15:00
    </span>
  </div>
</div>
`;

exports[`<ChatMessage /> renders name of user correctly 1`] = `
<div
  className="ChatMessage-messageWrapper-63"
>
  <div
    className="MuiAvatar-root-71 MuiAvatar-colorDefault-72"
    style={
      Object {
        "backgroundColor": "#ffc107",
      }
    }
  >
    NS
  </div>
  <div
    className="MuiPaper-root-74 MuiPaper-elevation2-78 MuiPaper-rounded-75 ChatMessage-message-65"
  >
    <span
      className="MuiTypography-root-101 MuiTypography-caption-111"
      style={
        Object {
          "color": "#ffc107",
        }
      }
    >
      Name Surname
    </span>
    <pre
      className="MuiTypography-root-101 MuiTypography-body1-110 ChatMessage-content-69"
    >
      test message
    </pre>
    <span
      className="MuiTypography-root-101 MuiTypography-caption-111 ChatMessage-time-70"
    >
      15:00
    </span>
  </div>
</div>
`;

exports[`<ChatMessage /> renders status message 1`] = `
<div
  className="ChatMessage-messageWrapper-63"
>
  <div
    className="ChatMessage-statusMessage-67"
  >
    <span
      className="MuiTypography-root-101 MuiTypography-caption-111 ChatMessage-statusMessageUser-68"
      style={
        Object {
          "color": "#8bc34a",
        }
      }
    >
      test
    </span>
    test message
    <span
      className="MuiTypography-root-101 MuiTypography-caption-111"
    >
      2 days ago
    </span>
  </div>
</div>
`;
